  * [fix] osparser: fix in OpsiServiceCall section (#4790, !91, a.schmitz)
  * [fix] xml2 attribute sequence:
          in (common) osxml, osxmlsections, osxmltdom
          instead of (fcl) DOM, XMLRead, XMLWrite
          now (LCL) az2_DOM, laz2_XMLRead, laz2_XMLWrite
          additional changes to make to run the units with these libraries (references: #4791, , d.oertel)


-- j.werner <j.werner@uib.de> 21 September 2022


opsi-script (4.12.6.1) unreleased; urgency=medium

  * [new] osparser: Implementation of copy -u for Linux (#4739, !71, j.laajili)
  * [new] osregistry, osparser: new data type QWord added as trdInt64 to normal registry section and regedit format (QWord is not supported in AddReg format) (#4746, !67, a.schmitz)
  * [new] osparser: new script command deleteListEntries to remove entries from list variables in the windows registry (#4541, !57, a.schmitz)
  * [new] osDoRegistryFunctions: new unit to outsource code from the doRegistry functions in the osparser (a.schmitz)
  * [new] osparser: New platform-independant HashFromFile function + HashLib4Pascal library supporting 80 hashing algorithms (#4743, !74, j.laajili)
  * [new] osparser: new statement reloadProductList (#4723, !79, j.werner)
  * [change] osparser: parse direct initialization of variables (string and stringlist) equal to 'set', i.e. for example logging is the same now (#4747, !65, a.schmitz)
  * [change] osregistry: synchronize data type handling with the documentation, i.e. supp does not change data types (!59, a.schmitz)
  * [change] osprocessux, osfuncwin: revise code of RunCommandAndCaptureOut (#4764, !73, a.schmitz)
  * [change] oscrypt: function md5fromFile, now uses the new function HashFromFile (#4743, !74, j.werner) 
  * [fix] osparser: Adding new optional encoding parameter to function GetValueFromIniFile (#3071, !68, j.laajili)
  * [fix] osparser: parse and evaluate generic stringlist equal to createStringList for correct functionality (#4770, !77, a.schmitz)