@@ -11,6 +11,9 @@ opsi-script (4.12.7.0) unreleased; urgency=medium
           instead of (fcl) DOM, XMLRead, XMLWrite
           now (LCL) az2_DOM, laz2_XMLRead, laz2_XMLWrite
           additional changes to make to run the units with these libraries (references: #4791, , d.oertel)
+  * [fix] xml2: osxmlsections: makeNodePathWithTextContent: additional parameter for strictmode
+          xml2: osxmlsections: makeNodePathWithTextContent:
+          use strictmode parameter for node creation (references: #4794, , d.oertel)
 
 
 -- j.werner <j.werner@uib.de> 21 September 2022
